# Weather

./: .gitignore  README.md  main.bat  main.py  pyproject.toml  schema.md
query's/: coldest_hours.sql  comfort_index_top.sql  hottest_hours.sql  precipitation_overview.sql  wind_risk_levels_summary.sql
src/: logging_config.py  pipeline.py
src/api/: api_data.py
src/extract/: api.py
src/load/: db_load.py
src/transform/: transform.py
