[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openmeteo-requests>=1.7.4",
    "pandas>=2.3.3",
    "python-dateutil>=2.9.0.post0",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.5",
]
